Added some hub configurations.

--- a/SignalRApp/wwwroot/index.html
+++ b/SignalRApp/wwwroot/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>SignalR Chat - Metanit.com</title>
+    <title>SignalR Chat - Vadim Rumyancev</title>
 </head>
 <body>
     <div id="loginBlock">
-        Введите логин:<br />
+        Log in:<br />
         <input id="userName" type="text" />
-        <input id="loginBtn" type="button" value="Войти" />
+        <input id="loginBtn" type="button" value="Enter" />
     </div><br />
 
     <div id="header"></div><br />
 
     <div id="inputForm">
         <input type="text" id="message" />
-        <input type="button" id="sendBtn" value="Отправить" />
+        <input type="button" id="sendBtn" value="Send" />
     </div>
     <div id="chatroom"></div>
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
