Configured js client

--- a/SignalRApp/wwwroot/index.html
+++ b/SignalRApp/wwwroot/index.html
@@ -21,18 +21,18 @@
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
     <script>
         const hubConnection = new signalR.HubConnectionBuilder()
-            .withUrl("/chat")
+            .withUrl("/chat", { transport: signalR.HttpTransportType.WebSockets })
+            .configureLogging(signalR.LogLevel.Information)
             .build();
 
+        hubConnection.serverTimeoutMilliseconds = 1000 * 60 * 10;
+
         let userName = '';
-        // получение сообщения от сервера
         hubConnection.on('Send', function (message, userName) {
 
-            // создаем элемент <b> для имени пользователя
             let userNameElem = document.createElement("b");
             userNameElem.appendChild(document.createTextNode(userName + ': '));
 
-            // создает элемент <p> для сообщения пользователя
             let elem = document.createElement("p");
             elem.appendChild(userNameElem);
             elem.appendChild(document.createTextNode(message));
@@ -42,12 +42,11 @@
 
         });
 
-        // установка имени пользователя
         document.getElementById("loginBtn").addEventListener("click", function (e) {
             userName = document.getElementById("userName").value;
             document.getElementById("header").innerHTML = '<h3>Welcome ' + userName + '</h3>';
         });
-        // отправка сообщения на сервер
+
         document.getElementById("sendBtn").addEventListener("click", function (e) {
             let message = document.getElementById("message").value;
             hubConnection.invoke("Send", message, userName);
