--- a/SignalRApp/wwwroot/index.html
+++ b/SignalRApp/wwwroot/index.html
@@ -1,53 +1,80 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Главная</title>
+    <title>SignalR Chat</title>
 </head>
 <body>
+    <div id="loginBlock">
+        Введите логин:<br />
+        <input id="userName" type="text" />
+        <input id="userPassword" type="text" />
+        <input id="loginBtn" type="button" value="Войти" />
+    </div><br />
 
-    <form method="post">
-        <input type="text" name="product" id="productField" />
-        <input type="submit" value="Отправить" id="submitForm" />
-    </form>
+    <div id="header"></div><br />
 
-    <div id="notify"></div>
+    <div id="inputForm">
+        <input type="text" id="message" />
+        <input type="button" id="sendBtn" disabled value="Отправить" />
+    </div>
+    <div id="chatroom"></div>
 
     <script src="js/signalr/dist/browser/signalr.min.js"></script>
     <script>
+        let token;      // токен
+        let username;   // имя пользователя
         const hubConnection = new signalR.HubConnectionBuilder()
-            .withUrl("/chat")
+            .withUrl("/chat", { accessTokenFactory: () => token })
             .build();
-        let connectionId = "";
-        document.getElementById("submitForm")
-            .addEventListener("click", function (e) {
-                e.preventDefault();
 
-                const data = new FormData();
-                data.append("product", document.getElementById("productField").value);
-                data.append("connectionId", connectionId);
+        hubConnection.on("Receive", function (message, userName) {
 
-                fetch("home/create", {
-                    method: "POST",
-                    body: data
-                })
-                    .catch(error => console.error("Error: ", error));
-            });
-        hubConnection.on("Notify", function (message) {
+            // создаем элемент <b> для имени пользователя
+            let userNameElem = document.createElement("b");
+            userNameElem.appendChild(document.createTextNode(userName + ": "));
 
+            // создает элемент <p> для сообщения пользователя
             let elem = document.createElement("p");
+            elem.appendChild(userNameElem);
             elem.appendChild(document.createTextNode(message));
 
-            document.getElementById("notify").appendChild(elem);
-
+            var firstElem = document.getElementById("chatroom").firstChild;
+            document.getElementById("chatroom").insertBefore(elem, firstElem);
         });
-        hubConnection.start().then(() => {
-            console.log(hubConnection.connectionId);
-            connectionId = hubConnection.connectionId;
+
+        // аутентификация
+        document.getElementById("loginBtn").addEventListener("click", function (e) {
+
+            var request = new XMLHttpRequest();
+            // посылаем запрос на адрес "/token", в ответ получим токен и имя пользователя
+            request.open("POST", "/token", true);
+            request.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+            request.addEventListener("load", function () {
+                if (request.status < 400) { // если запрос успешный
+
+                    let data = JSON.parse(request.response);   // парсим ответ
+                    token = data.access_token;
+                    username = data.username;
+
+                    document.getElementById("sendBtn").disabled = false;
+
+                    hubConnection.start()       // начинаем соединение с хабом
+                        .catch(err => {
+                            console.error(err.toString());
+                            document.getElementById("loginBtn").disabled = true;
+                            document.getElementById("sendBtn").disabled = true;
+                        });
+                }
+            });
+            // отправляем запрос на аутентификацию
+            request.send("username=" + document.getElementById("userName").value +
+                "&password=" + document.getElementById("userPassword").value);
+        });
+        // отправка сообщения на сервер
+        document.getElementById("sendBtn").addEventListener("click", function (e) {
+            let message = document.getElementById("message").value;
+            hubConnection.invoke("Send", message, username);
         });
     </script>
 </body>
