--- a/SignalRApp/wwwroot/index.html
+++ b/SignalRApp/wwwroot/index.html
@@ -12,22 +12,21 @@
         <input id="loginBtn" type="button" value="Войти" />
     </div><br />
 
-    <div id="header"></div><br />
-
     <div id="inputForm">
-        <input type="text" id="message" />
+        <input type="text" id="message" placeholder="Введите сообщение" />
+        <input type="text" id="receiver" placeholder="Введите получателя" />
         <input type="button" id="sendBtn" disabled value="Отправить" />
     </div>
     <div id="chatroom"></div>
 
-    <script src="js/signalr/dist/browser/signalr.min.js"></script>
+    <!--<script src="js/signalr/dist/browser/signalr.min.js"></script>-->
+
+    <script src="https://unpkg.com/@microsoft/signalr@3.1.0/dist/browser/signalr.min.js"></script>
     <script>
-        let token;      // токен
-        let username;   // имя пользователя
+        let token;
         const hubConnection = new signalR.HubConnectionBuilder()
             .withUrl("/chat", { accessTokenFactory: () => token })
             .build();
-
         hubConnection.on("Receive", function (message, userName) {
 
             // создаем элемент <b> для имени пользователя
@@ -42,20 +41,27 @@
             var firstElem = document.getElementById("chatroom").firstChild;
             document.getElementById("chatroom").insertBefore(elem, firstElem);
         });
+        hubConnection.on("Notify", function (message) {
+
+            // создает элемент <p> для сообщения пользователя
+            let elem = document.createElement("p");
+            elem.appendChild(document.createTextNode(message));
+
+            var firstElem = document.getElementById("chatroom").firstChild;
+            document.getElementById("chatroom").insertBefore(elem, firstElem);
+        });
 
         // аутентификация
         document.getElementById("loginBtn").addEventListener("click", function (e) {
 
             var request = new XMLHttpRequest();
-            // посылаем запрос на адрес "/token", в ответ получим токен и имя пользователя
             request.open("POST", "/token", true);
             request.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
             request.addEventListener("load", function () {
                 if (request.status < 400) { // если запрос успешный
 
-                    let data = JSON.parse(request.response);   // парсим ответ
+                    let data = JSON.parse(request.response);
                     token = data.access_token;
-                    username = data.username;
 
                     document.getElementById("sendBtn").disabled = false;
 
@@ -66,6 +72,10 @@
                             document.getElementById("sendBtn").disabled = true;
                         });
                 }
+                else {
+                    console.log("Status", request.status);
+                    console.log(request.responseText);
+                }
             });
             // отправляем запрос на аутентификацию
             request.send("username=" + document.getElementById("userName").value +
@@ -74,7 +84,8 @@
         // отправка сообщения на сервер
         document.getElementById("sendBtn").addEventListener("click", function (e) {
             let message = document.getElementById("message").value;
-            hubConnection.invoke("Send", message, username);
+            let to = document.getElementById("receiver").value;
+            hubConnection.invoke("Send", message, to);
         });
     </script>
 </body>
